welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:2: error: not found: value f
f=false
^BDRBuggle:4: error: reassignment to val
if (litMessage="R"){
              ^BDRBuggle:9: error: reassignment to val
if (litMessage="L"){
              ^BDRBuggle:14: error: reassignment to val
if (litMessage="I"){
              ^BDRBuggle:21: error: reassignment to val
if(litMessage="A"){
             ^BDRBuggle:25: error: reassignment to val
if(litMessage="B"){
             ^BDRBuggle:30: error: reassignment to val
if(litMessage="C"){
             ^BDRBuggle:36: error: reassignment to val
if(litMessage="Z"){
             ^BDRBuggle:40: error: reassignment to val
if(litMessage="Y"){
             ^BDRBuggle:45: error: reassignment to val
if(litMessage="X"){
             ^BDRBuggle:50: error: not found: value f
else f=true 
     ^